--- a/src/app/components/employee-skills/employee-skills.component.html
+++ b/src/app/components/employee-skills/employee-skills.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-4 justify-content-center">
-    <p class="">
+    <p class="row">
       <button
         class="btn"
         type="button"
