--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,50 +1,18 @@
-th,
-td {
-  white-space: nowrap;
+datalist {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  writing-mode: vertical-lr;
+  width: 206px;
 }
 
-.table-wrapper {
-  overflow-x: scroll;
-  overflow-y: scroll;
-  height: fit-content;
-  max-height: 70vh;
-  width: 600px;
-  margin: 0 auto;
+option {
+  padding: 0;
+  transform: rotate(-90deg);
+  font-size: 14px;
 }
 
-table th {
-  position: sticky;
-  top: 0;
-  text-align: center;
-  z-index: 2;
-}
-
-td:first-child,
-th:first-child {
-  position: sticky;
-  left: 0;
-}
-
-table th:first-child {
-  z-index: 4;
-}
-
-td:nth-child(2),
-th:nth-child(2) {
-  position: sticky;
-  left: 2.818em;
-}
-
-table th:nth-child(2) {
-  z-index: 4;
-}
-
-td:nth-child(3),
-th:nth-child(3) {
-  position: sticky;
-  left: 7.838em;
-}
-
-table th:nth-child(3) {
-  z-index: 4;
+input[type="range"] {
+  width: 200px;
+  margin: 0;
 }
