--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,10 @@
-<div *ngFor="let category of skillCategories">
-  <div *ngFor="let skill of category.skills">
-    <label for="tempB">{{ skill.skillName }}</label
-    ><br />
-    <input
-      type="range"
-      id="tempB"
-      name="temp"
-      list="values"
-      (change)="skillEdit(category, skill, $event)"
-      [value]="getValue(category, skill)"
-      min="1"
-      max="5"
-    />
-
-    <datalist id="values">
-      <option value="1" label="1"></option>
-      <option value="2" label="2"></option>
-      <option value="3" label="3"></option>
-      <option value="4" label="4"></option>
-      <option value="5" label="5"></option>
-    </datalist>
+<div class="range mt-4">
+  <div class="sliderValue">
+    <span>100</span>
+  </div>
+  <div class="field">
+    <div class="value left">0</div>
+    <input type="range" min="10" max="200" value="100" steps="1" />
+    <div class="value right">200</div>
   </div>
 </div>
