--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,85 @@
-<div class="range mt-4">
-  <div class="sliderValue">
-    <span>100</span>
-  </div>
-  <div class="field">
-    <div class="value left">0</div>
-    <input type="range" min="10" max="200" value="100" steps="1" />
-    <div class="value right">200</div>
-  </div>
-</div>
+<a style="cursor: pointer" (click)="exportexcel()"> Download </a>
+
+<table #excelTable id="excel-table">
+  <tr>
+    <th class="top-heading" style="background-color: red">Name</th>
+    <th class="top-heading">Role</th>
+    <th class="top-heading" colspan="4">Java</th>
+    <th class="top-heading" colspan="2">Javascript</th>
+    <th class="top-heading" colspan="3">.net</th>
+    <th class="top-heading" colspan="2">Mobile</th>
+    <th class="top-heading" colspan="3">Testing</th>
+  </tr>
+  <tr>
+    <th></th>
+    <th></th>
+    <th class="sub-heading">Spring</th>
+    <th class="sub-heading">Hibernate</th>
+    <th class="sub-heading">OOP</th>
+    <th class="sub-heading">Servlet</th>
+    <th class="sub-heading">React</th>
+    <th class="sub-heading">Node</th>
+    <th class="sub-heading">MVC</th>
+    <th class="sub-heading">Core</th>
+    <th class="sub-heading">asp</th>
+    <th class="sub-heading">IOS</th>
+    <th class="sub-heading">Android</th>
+    <th class="sub-heading">Automation</th>
+    <th class="sub-heading">Karma</th>
+    <th class="sub-heading">Jest</th>
+  </tr>
+  <tr>
+    <td>Dwij</td>
+    <td>Intern</td>
+    <td>2</td>
+    <td>3</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>Dwij</td>
+    <td>Intern</td>
+    <td>2</td>
+    <td>3</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>Dwij</td>
+    <td>Intern</td>
+    <td>2</td>
+    <td>3</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+  </tr>
+</table>
