--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,22 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+html,
+body {
+  display: grid;
+  height: 100%;
+  text-align: center;
+  place-items: center;
+  background: #664aff;
+}
 .range {
-  height: 80px;
-  width: 380px;
-  background: #fff;
-  border-radius: 10px;
-  padding: 0 65px 0 45px;
-  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
+  height: 40px;
+  margin-top: 45px;
+  width: 120px;
 }
 .sliderValue {
   position: relative;
@@ -12,16 +24,20 @@
 }
 .sliderValue span {
   position: absolute;
-  height: 45px;
-  width: 45px;
+  height: 25px;
+  width: 25px;
   transform: translateX(-70%) scale(0);
-  font-weight: 500;
-  top: -40px;
-  line-height: 55px;
+  font-weight: 300;
+  font-size: 12px;
+  top: -30px;
+  line-height: 25px;
   z-index: 2;
   color: #fff;
   transform-origin: bottom;
   transition: transform 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .sliderValue span.show {
   transform: translateX(-70%) scale(1);
@@ -61,14 +77,7 @@
   right: -43px;
 }
 .range input {
-  -webkit-appearance: none;
   width: 100%;
-  height: 3px;
-  background: #ddd;
-  border-radius: 5px;
-  outline: none;
-  border: none;
-  z-index: 2222;
 }
 .range input::-webkit-slider-thumb {
   -webkit-appearance: none;
